UMAP -> UPI Setu

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Aggregators
-page_title: UMAP - API integration for aggregators
+page_title: UPI Setu - API integration for aggregators
 order: 1
 visible_in_sidebar: true
 ---
@@ -16,18 +16,18 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products that the merchant can use.
+Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UPI Setu APIs with your internal systems. First, you have to create a merchant and then enable products that the merchant can use.
 
 <hr class="primary" />
 
 #### Step 1 — Configure a merchant
 
-As an aggregator on UMAP, you have to first create a merchant by providing their business details and creating a VPA (which associates them to you, the aggregator). After this, you can enable UPI products for the merchant.
+As an aggregator on UPI Setu, you have to first create a merchant by providing their business details and creating a VPA (which associates them to you, the aggregator). After this, you can enable UPI products for the merchant.
 
 <Card padding="small" shape="rounded">
   <Link href="/payments/umap/merchant-onboarding">Merchant on-boarding</Link>
   <Text weight="400" marginTop="nano" marginBottom="none" size="small">
-    Create your first merchant on UMAP
+    Create your first merchant on UPI Setu
   </Text>
 </Card>
 
