--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Merchants
-page_title: UMAP - API integration for merchants
+page_title: UPI Setu - API integration for merchants
 order: 2
 visible_in_sidebar: true
 ---
@@ -16,9 +16,9 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-#### What can you do with UMAP?
+#### What can you do with UPI Setu?
 
-Once you have on-boarded onto UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case. Below are some example scenarios to help you understand these products better—
+Once you have on-boarded onto UPI Setu as a merchant, and have your API credentials, the next step is to choose the right product for your use case. Below are some example scenarios to help you understand these products better—
 
 <table>
   <tr>
