--- a/content/payments/umap/mandates/one-shot.mdx
+++ b/content/payments/umap/mandates/one-shot.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: OneShot
-page_title: UMAP - Mandates - OneShot
+page_title: UPI Setu - Mandates - OneShot
 order: 1
 visible_in_sidebar: true
 ---
@@ -49,7 +49,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     <ol>
                         <li>
                             <b>Merchant</b> sends one time mandate details to{" "}
-                            <b>UMAP</b> and receives a unique one time mandate
+                            <b>UPI Setu</b> and receives a unique one time mandate
                             creation intent link / qr to send to their{" "}
                             <b>Customer</b>
                         </li>
@@ -60,13 +60,13 @@ The first step to collect a payment via a one time mandate is for the merchant t
                             one time mandate creation.
                         </li>
                         <li>
-                            <b>UMAP</b> triggers a webhook notification on one
+                            <b>UPI Setu</b> triggers a webhook notification on one
                             time mandate creation initiation which the merchant
                             can use to update one time mandate status at their
                             end.
                         </li>
                         <li>
-                            Once the mandate is <b>LIVE</b>, <b>UMAP</b>{" "}
+                            Once the mandate is <b>LIVE</b>, <b>UPI Setu</b>{" "}
                             triggers another webhook notification which the
                             merchant can use to mark mandate status as{" "}
                             <b>LIVE</b> at their end.
@@ -76,7 +76,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     <h6>Step 2 - Send a pre debit notification</h6>
                     <p>
                         <b>Merchant</b> triggers a pre debit notification via
-                        UMAP <b>48 - 72 Hrs before</b> debit / execution to let
+                        UPI Setu <b>48 - 72 Hrs before</b> debit / execution to let
                         the <b>Customer</b> get notified about the upcoming
                         debit.
                     </p>
@@ -90,7 +90,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         <li>
                             48 - 72 Hrs after the pre debit notification is
                             successful, <b>Merchant</b> triggers mandate
-                            execution via <b>UMAP</b>.
+                            execution via <b>UPI Setu</b>.
                         </li>
                         <li>
                             <b>Customer</b> receives a collect request
@@ -140,7 +140,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     <ol>
                         <li>
                             <b>Merchant</b> sends one time mandate details to{" "}
-                            <b>UMAP</b> and the <b>Customer</b> receives a one
+                            <b>UPI Setu</b> and the <b>Customer</b> receives a one
                             time mandate creation notification on their UPI app
                         </li>
                         <li>
@@ -150,7 +150,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         </li>
                         <li>
                             Once the one time mandate is <b>LIVE</b>,{" "}
-                            <b>UMAP</b> triggers a webhook notification which
+                            <b>UPI Setu</b> triggers a webhook notification which
                             the merchant can use to mark one time mandate status
                             as <b>LIVE</b> at their end.
                         </li>
@@ -159,7 +159,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     <h6>Step 2 - send a pre debit notification</h6>
                     <p>
                         <b>Merchant</b> triggers a pre debit notification via{" "}
-                        <b>UMAP</b> 48 - 72 Hrs before debit / execution to let
+                        <b>UPI Setu</b> 48 - 72 Hrs before debit / execution to let
                         the <b>Customer</b> get notified about the upcoming
                         debit.
                     </p>
@@ -169,7 +169,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         <li>
                             48 - 72 Hrs after the pre debit notification is
                             successful, <b>Merchant</b> triggers mandate
-                            execution via <b>UMAP</b>.
+                            execution via <b>UPI Setu</b>.
                         </li>
                         <li>
                             <b>Customer</b> receives a collect request
