--- a/content/payments/umap/mandates/one-shot/create.mdx
+++ b/content/payments/umap/mandates/one-shot/create.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create One Time Mandate
+page_title: UPI Setu - Mandates - Create One Time Mandate
 order: 1
 visible_in_sidebar: true
 ---
@@ -57,8 +57,10 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
                   <code>merchantId</code>
                   <br />
                   <code>Authorization</code>: Bearer &lt;
-                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
-                  <a href="/payments/umap/api-integration" target="_blank">
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
                     OAuth
                   </a>
                   .<br />
@@ -288,8 +290,10 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
                   <code>merchantId</code>
                   <br />
                   <code>Authorization</code>: Bearer &lt;
-                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
-                  <a href="/payments/umap/api-integration" target="_blank">
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
                     OAuth
                   </a>
                   .<br />
@@ -471,7 +475,7 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
 
 #### Check mandate status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate.
+In addition to the notifications sent by UPI Setu, Merchant can use this API to check the status of a mandate.
 
 <table>
   <tbody>
