--- a/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Pre Debit Notify
-page_title: UMAP - Mandates - Send One Time Mandate Pre Debit Notification
+page_title: UPI Setu - Mandates - Send One Time Mandate Pre Debit Notification
 order: 2
 visible_in_sidebar: true
 ---
@@ -147,7 +147,9 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#notify" target="_blank">here</a>.
 
-<p>UMAP will send notifications to the merchant for the following events:</p>
+<p>
+  UPI Setu will send notifications to the merchant for the following events:
+</p>
 <ul>
   <li>
     <b>mandate_operation.notify.success</b> (if mandate pre debit notification
@@ -177,7 +179,7 @@ Please refer to the Document Reference section for checking the API reference an
 
 #### Check mandate pre debit notification status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate pre debit notification.
+In addition to the notifications sent by UPI Setu, Merchant can use this API to check the status of a mandate pre debit notification.
 
 <table>
   <tbody>
