--- a/content/payments/umap/mandates/recur.mdx
+++ b/content/payments/umap/mandates/recur.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Recur
-page_title: UMAP - Mandates - Recur
+page_title: UPI Setu - Mandates - Recur
 order: 1
 visible_in_sidebar: true
 ---
@@ -52,7 +52,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                     <ol>
                         <li>
                             <b>Merchant</b> sends recurring mandate details to{" "}
-                            <b>UMAP</b> and receives a unique recurring mandate
+                            <b>UPI Setu</b> and receives a unique recurring mandate
                             creation intent link / qr to send to their{" "}
                             <b>Customer</b>
                         </li>
@@ -63,13 +63,13 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                             recurring mandate creation.
                         </li>
                         <li>
-                            <b>UMAP</b> triggers a webhook notification on
+                            <b>UPI Setu</b> triggers a webhook notification on
                             recurring mandate creation initiation which the
                             merchant can use to update recurring mandate status
                             at their end.
                         </li>
                         <li>
-                            Once the mandate is <b>LIVE</b>, <b>UMAP</b>{" "}
+                            Once the mandate is <b>LIVE</b>, <b>UPI Setu</b>{" "}
                             triggers another webhook notification which the
                             merchant can use to mark mandate status as{" "}
                             <b>LIVE</b> at their end.
@@ -79,7 +79,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                     <h6>Step 2 - send a pre debit notification</h6>
                     <p>
                         In every recurrence cycle, <b>Merchant</b> triggers a
-                        pre debit notification via <b>UMAP</b> 48 - 72 Hrs
+                        pre debit notification via <b>UPI Setu</b> 48 - 72 Hrs
                         before debit / execution to let the <b>Customer</b> get
                         notified about the upcoming debit.
                     </p>
@@ -96,7 +96,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         <li>
                             48 - 72 Hrs after the pre debit notification is
                             successful, <b>Merchant</b> triggers mandate
-                            execution via <b>UMAP</b>.
+                            execution via <b>UPI Setu</b>.
                         </li>
                         <li>
                             <b>Customer</b> receives a collect request
@@ -155,7 +155,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                     <ol>
                         <li>
                             <b>Merchant</b> sends recurring mandate details to{" "}
-                            <b>UMAP</b> and the <b>Customer</b> receives a
+                            <b>UPI Setu</b> and the <b>Customer</b> receives a
                             recurring mandate creation notification on their UPI
                             app
                         </li>
@@ -166,7 +166,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         </li>
                         <li>
                             Once the recurring mandate is <b>LIVE</b>,{" "}
-                            <b>UMAP</b> triggers a webhook notification which
+                            <b>UPI Setu</b> triggers a webhook notification which
                             the merchant can use to mark recurring mandate
                             status as <b>LIVE</b> at their end.
                         </li>
@@ -175,7 +175,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                     <h6>Step 2 - sendend a pre debit notification</h6>
                     <p>
                         In every recurrence cycle, <b>Merchant</b> triggers a
-                        pre debit notification via <b>UMAP</b> 48 - 72 Hrs
+                        pre debit notification via <b>UPI Setu</b> 48 - 72 Hrs
                         before debit / execution to let the <b>Customer</b> get
                         notified about the upcoming debit.
                     </p>
@@ -192,7 +192,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         <li>
                             48 - 72 Hrs after the pre debit notification is
                             successful, <b>Merchant</b> triggers mandate
-                            execution via <b>UMAP</b>.
+                            execution via <b>UPI Setu</b>.
                         </li>
                         <li>
                             <b>Customer</b> receives a collect request
