--- a/content/payments/umap/mandates/recur/check-status.mdx
+++ b/content/payments/umap/mandates/recur/check-status.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check payment status
-page_title: UMAP - Mandates - Check payment status
+page_title: UPI Setu - Mandates - Check payment status
 order: 4
 visible_in_sidebar: true
 ---
