--- a/content/payments/umap/mandates/recur/create.mdx
+++ b/content/payments/umap/mandates/recur/create.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create recurring mandate
+page_title: UPI Setu - Mandates - Create recurring mandate
 order: 1
 visible_in_sidebar: true
 ---
@@ -57,8 +57,10 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                   <code>merchantId</code>
                   <br />
                   <code>Authorization</code>: Bearer &lt;
-                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
-                  <a href="/payments/umap/api-integration" target="_blank">
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
                     OAuth
                   </a>
                   .<br />
@@ -138,9 +140,9 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                 <p>
                   If the value of <code>autoExecute</code> and{" "}
                   <code>autoPreNotify</code> is <code>true</code> then no
-                  merchant intervention is needed and UMAP is responsible for
-                  triggering the pre debit notification and execution in every
-                  recurrence cycle.
+                  merchant intervention is needed and UPI Setu is responsible
+                  for triggering the pre debit notification and execution in
+                  every recurrence cycle.
                 </p>
               </td>
             </tr>
@@ -175,7 +177,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                                 <p>
                                   pre debit notification, execution is triggered
                                   as and when the merchant makes pre debit
-                                  notification / execution API calls to UMAP
+                                  notification / execution API calls to UPI Setu
                                 </p>
                               </td>
                             </tr>
@@ -408,8 +410,10 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                   <code>merchantId</code>
                   <br />
                   <code>Authorization</code>: Bearer &lt;
-                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
-                  <a href="/payments/umap/api-integration" target="_blank">
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
                     OAuth
                   </a>
                   .<br />
@@ -486,9 +490,9 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                 <p>
                   If the value of <code>autoExecute</code> and{" "}
                   <code>autoPreNotify</code> is <code>true</code> then no
-                  merchant intervention is needed and UMAP is responsible for
-                  triggering the pre debit notification and execution in every
-                  recurrence cycle.
+                  merchant intervention is needed and UPI Setu is responsible
+                  for triggering the pre debit notification and execution in
+                  every recurrence cycle.
                 </p>
               </td>
             </tr>
@@ -523,7 +527,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                                 <p>
                                   pre debit notification, execution is triggered
                                   as and when the merchant makes pre debit
-                                  notification / execution API calls to UMAP
+                                  notification / execution API calls to UPI Setu
                                 </p>
                               </td>
                             </tr>
@@ -712,7 +716,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
 
 #### Check mandate status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate.
+In addition to the notifications sent by UPI Setu, Merchant can use this API to check the status of a mandate.
 
 <table>
   <tbody>
