--- a/content/payments/umap/mandates/reserve-plus.mdx
+++ b/content/payments/umap/mandates/reserve-plus.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: ReservePlus
-page_title: UMAP - Mandates - ReservePlus
+page_title: UPI Setu - Mandates - ReservePlus
 order: 1
 visible_in_sidebar: true
 ---
@@ -43,8 +43,8 @@ These are the steps involved in collecting a payment from a customer via an inte
 <ol>
   <li>
     <b>Merchant</b> sends single block multi debit mandate details to{" "}
-    <b>UMAP</b> and receives a unique single block multi debit mandate creation
-    intent link / qr to send to their <b>Customer</b>
+    <b>UPI Setu</b> and receives a unique single block multi debit mandate
+    creation intent link / qr to send to their <b>Customer</b>
   </li>
   <li>
     <b>Customer</b> clicks single block multi debit mandate creation intent
@@ -52,12 +52,12 @@ These are the steps involved in collecting a payment from a customer via an inte
     enters mPIN to initiate single block multi debit mandate creation.
   </li>
   <li>
-    <b>UMAP</b> triggers a webhook notification on single block multi debit
+    <b>UPI Setu</b> triggers a webhook notification on single block multi debit
     mandate creation initiation which the merchant can use to update single
     block multi debit mandate status at their end.
   </li>
   <li>
-    Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook
+    Once the mandate is <b>LIVE</b>, <b>UPI Setu</b> triggers another webhook
     notification which the merchant can use to mark mandate status as{" "}
     <b>LIVE</b> at their end.
   </li>
@@ -67,7 +67,7 @@ These are the steps involved in collecting a payment from a customer via an inte
 
 ###### Step 2 - Trigger mandate execution
 
-Every time that a payment needs to be collected, the **merchant** triggers mandate execution via **UMAP**.
+Every time that a payment needs to be collected, the **merchant** triggers mandate execution via **UPI Setu**.
 
 A **customer** receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.
 
