--- a/content/payments/umap/mandates/reserve-plus/check-status.mdx
+++ b/content/payments/umap/mandates/reserve-plus/check-status.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check status
-page_title: UMAP - Mandates - Check payment status
+page_title: UPI Setu - Mandates - Check payment status
 order: 3
 visible_in_sidebar: true
 ---
