--- a/content/payments/umap/mandates/reserve-plus/create.mdx
+++ b/content/payments/umap/mandates/reserve-plus/create.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create single block multi-debit
+page_title: UPI Setu - Mandates - Create single block multi-debit
 order: 1
 visible_in_sidebar: true
 ---
@@ -234,7 +234,7 @@ visible_in_sidebar: true
     check mandate status API
   </Link>{" "}
   to check if the mandate is <code>LIVE</code> (this is an alternative way to
-  get status, aside from the notifications sent by UMAP)
+  get status, aside from the notifications sent by UPI Setu)
 </p>
 <p>
   Please refer to the Document Reference section for checking the API reference
@@ -251,7 +251,7 @@ visible_in_sidebar: true
 
 #### Check mandate status
 
-A merchant can use this API to check the status of a mandate (this is an alternative way to get status, aside from the notifications sent by UMAP).
+A merchant can use this API to check the status of a mandate (this is an alternative way to get status, aside from the notifications sent by UPI Setu).
 
 <table>
   <tbody>
