--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Merchant on-boarding
-page_title: UMAP - Merchant onboarding
+page_title: UPI Setu - Merchant onboarding
 order: 2
 visible_in_sidebar: true
 ---
@@ -8,75 +8,88 @@ visible_in_sidebar: true
 ## Merchant on-boarding
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/aggregators" target="_self">🌟 Aggregator quickstart ↗</a><br/>
-<a href="/payments/umap/api-integration/aggregators" target="_self">🌟 Start API integration for aggregators ↗</a>
+<a href="/payments/umap/quickstart/aggregators" target="_self">
+  🌟 Aggregator quickstart ↗
+</a>
+<br />
+<a href="/payments/umap/api-integration/aggregators" target="_self">
+  🌟 Start API integration for aggregators ↗
+</a>
 
-<br/>
-<br/>
+<br />
+<br />
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
+  The merchant on-boarding APIs are only relevant for an aggregator. If you are
+  an individual merchant, you can proceed to the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    merchant quickstart
+  </a>{" "}
+  and either of our product pages{" "}
+  <a href="/payments/umap/payments" target="_self">
+    UPI payments
+  </a>{" "}
+  or{" "}
+  <a href="/payments/umap/mandates" target="_self">
+    UPI mandates
+  </a>
+  .
 </Callout>
 
 <hr class="primary" />
 
 #### Steps to on-board a merchant
 
-An **aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and as the final step activation of the merchant’s ability to process transactions.
+An **aggregator** can seamlessly on-board merchants onto the UPI Setu ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and as the final step activation of the merchant’s ability to process transactions.
 
 <hr class="tertiary" />
 
 ###### Step 1 - Share information about merchant
 
-As the first step, the operations team gathers necessary details from the merchant, ensuring that the UMAP system has all the relevant information to proceed with the on-boarding process.
+As the first step, the operations team gathers necessary details from the merchant, ensuring that the UPI Setu system has all the relevant information to proceed with the on-boarding process.
 
 <hr class="tertiary" />
 
 ###### Step 2 - Setup a merchant
 
-After getting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UMAP system, which formally initiates their on-boarding journey.
+After getting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UPI Setu system, which formally initiates their on-boarding journey.
 
-<a
-    href="/payments/umap/merchant-onboarding/create-merchant-api"
-    target="_self"
->
-    Create merchant API ↗
+<a href="/payments/umap/merchant-onboarding/create-merchant-api" target="_self">
+  Create merchant API ↗
 </a>
 
 <hr class="tertiary" />
 
 ###### Step 3 - Register a VPA
-A VPA has to be created for the merchant, before they can start transacting on UMAP. This gives the merchant the capability to accept payments via UPI, completing the on-boarding process. This can include 2 steps—
 
+A VPA has to be created for the merchant, before they can start transacting on UPI Setu. This gives the merchant the capability to accept payments via UPI, completing the on-boarding process. This can include 2 steps—
 
 **Check if a VPA is available (optional)**
 
 This API helps you check the availability of a desired VPA, to ensure it is unique and can be assigned to the merchant without conflicts.
+
 <Text size="small">
-    <a
-        href="/payments/umap/merchant-onboarding/check-vpa-availability-api"
-        target="_self"
-    >
-        Check VPA availability API ↗
-    </a>
+  <a
+    href="/payments/umap/merchant-onboarding/check-vpa-availability-api"
+    target="_self"
+  >
+    Check VPA availability API ↗
+  </a>
 </Text>
 
-<br/>
+<br />
 
 **Register VPA (required)**
 
 The next API is used to assign a VPA to the merchant. With this, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
-<Text size="small">
-    <a 
-        href="/payments/umap/merchant-onboarding/create-vpa-api"
-        target="_self"
-    >
-        Create VPA API ↗
-    </a>
-</Text>
 
+<Text size="small">
+  <a href="/payments/umap/merchant-onboarding/create-vpa-api" target="_self">
+    Create VPA API ↗
+  </a>
+</Text>
 
 <hr class="primary" />
 
@@ -84,15 +97,15 @@ The next API is used to assign a VPA to the merchant. With this, merchant on-boa
 
 ###### Update merchant status
 
-If a merchant needs to be disabled by an aggregator then they can call this API to update their status. If a merchant is disabled UMAP will decline all transactions to the VPA assigned to this particular merchant.
+If a merchant needs to be disabled by an aggregator then they can call this API to update their status. If a merchant is disabled UPI Setu will decline all transactions to the VPA assigned to this particular merchant.
 
 <Text size="small">
-    <a
-        href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
-        target="_self"
-    >
-        Update merchant status API ↗
-    </a>
+  <a
+    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
+    target="_self"
+  >
+    Update merchant status API ↗
+  </a>
 </Text>
 
 ###### Update merchant details
@@ -100,58 +113,54 @@ If a merchant needs to be disabled by an aggregator then they can call this API 
 This API can be called to update the information associated with the merchant like settlement configuration or KYC information that may be required for accepting different payment instruments on UPI.
 
 <Text size="small">
-    <a
-        href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
-        target="_self"
-    >
-        Update merchant details API ↗
-    </a>
+  <a
+    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
+    target="_self"
+  >
+    Update merchant details API ↗
+  </a>
 </Text>
 
-<br/>
-<br/>
+<br />
+<br />
 
 <Row>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Link href="/payments/umap/api-integration/aggregators">
-            <Card padding="micro" shape="rounded">
-                <Text
-                    size="small"
-                    weight="600"
-                    textColor="slate-60"
-                    marginBottom="micro"
-                >
-                    READ ALSO &rarr;
-                </Text>
-                <Text size="large" weight="600" textColor="blue-90">
-                    Payments
-                </Text>
-                <Text weight="400">
-                    Enable UPI payments with QR, Collect & TPV
-                </Text>
-            </Card>
-        </Link>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Link href="/payments/umap/api-integration/merchants">
-            <Card padding="micro" shape="rounded">
-                <Text
-                    size="small"
-                    weight="600"
-                    textColor="slate-60"
-                    marginBottom="micro"
-                >
-                    READ ALSO &rarr;
-                </Text>
-                <Text size="large" weight="600" textColor="blue-90">
-                    Mandates
-                </Text>
-                <Text weight="400">
-                    Enable recurring payments with UPI Mandates
-                </Text>
-            </Card>
-        </Link>
-    </Portion>
+  <Portion desktopSpan="half" marginBottom="nano">
+    <Link href="/payments/umap/api-integration/aggregators">
+      <Card padding="micro" shape="rounded">
+        <Text
+          size="small"
+          weight="600"
+          textColor="slate-60"
+          marginBottom="micro"
+        >
+          READ ALSO &rarr;
+        </Text>
+        <Text size="large" weight="600" textColor="blue-90">
+          Payments
+        </Text>
+        <Text weight="400">Enable UPI payments with QR, Collect & TPV</Text>
+      </Card>
+    </Link>
+  </Portion>
+  <Portion desktopSpan="half">
+    <Link href="/payments/umap/api-integration/merchants">
+      <Card padding="micro" shape="rounded">
+        <Text
+          size="small"
+          weight="600"
+          textColor="slate-60"
+          marginBottom="micro"
+        >
+          READ ALSO &rarr;
+        </Text>
+        <Text size="large" weight="600" textColor="blue-90">
+          Mandates
+        </Text>
+        <Text weight="400">Enable recurring payments with UPI Mandates</Text>
+      </Card>
+    </Link>
+  </Portion>
 </Row>
 
 <WasPageHelpful />
