--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check VPA availability
-page_title: UMAP - Merchant on-boarding - Check VPA availability
+page_title: UPI Setu - Merchant on-boarding - Check VPA availability
 order: 2
 visible_in_sidebar: true
 ---
@@ -55,13 +55,11 @@ Use the following API to check if it is already associated with another merchant
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -82,45 +80,43 @@ Use the following API to check if it is already associated with another merchant
 
 <hr class="primary" />
 
-
-
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Request body",
-            content: (
-               <>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Request body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
     "vpa": "fastestupi@pineaxis"
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "availabilityStatus": "available",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "vpa": "fastestupi@pineaxis"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --request POST \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --request POST \
   --url https://umap.setu.co/api/v1/merchants/vpas/availability \
   --header 'Authorization: Bearer REPLACE_BEARER_TOKEN' \
   --header 'content-type: application/json' \
@@ -128,11 +124,11 @@ Use the following API to check if it is already associated with another merchant
   --data '{
     "vpa": "fastestupi@pineaxis"
 }'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
 
 <NextPage
