--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Setup a merchant
-page_title: UMAP - Merchant on-boarding - Setup merchant
+page_title: UPI Setu - Merchant on-boarding - Setup merchant
 order: 1
 visible_in_sidebar: true
 ---
@@ -26,7 +26,7 @@ visible_in_sidebar: true
 
 <br />
 
-You can use the following API, to on-board merchants in UMAP, by providing required business details for merchants and your `aggregatorAccountId`. The `aggregatorAccountId` will be shared with you as part of the aggregator on-boarding process.
+You can use the following API, to on-board merchants in UPI Setu, by providing required business details for merchants and your `aggregatorAccountId`. The `aggregatorAccountId` will be shared with you as part of the aggregator on-boarding process.
 
 <br />
 
@@ -53,13 +53,11 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
     <tr>
       <th>Header</th>
       <td>
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -80,17 +78,19 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
 
 <hr class="primary" />
 
-
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Request body",
-            content: (
-               <>
-                  <Text>The request payload shown below is the bare minimum that needs to be passed inorder to create a merchant on our platform</Text>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Request body",
+      content: (
+        <>
+          <Text>
+            The request payload shown below is the bare minimum that needs to be
+            passed inorder to create a merchant on our platform
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
     "aggregatorAccountId": "328a928f-e277-4798-8e28-4b19a61a8a23",
     "businessName": "Setu",
     "franchiseName": "Setu",
@@ -99,15 +99,21 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
     "genre": "ONLINE",
     "mcc": "5432"
 }`}
-                </CodeBlockWithCopy>
-                <br/>
-                <Callout type="warning">
-                    The <code>standardAccountId</code> parameter is optional and it is used to group merchants under a single organisation, when <code>standardAccountId</code> is not passed, the merchant is created under a new organisation.
-                </Callout>
-                <br/>
-                <Text>These are some optional parameters that you can pass along in the request payload, which will overrides the default behavior</Text>
-                <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+          <br />
+          <Callout type="warning">
+            The <code>standardAccountId</code> parameter is optional and it is
+            used to group merchants under a single organisation, when{" "}
+            <code>standardAccountId</code> is not passed, the merchant is
+            created under a new organisation.
+          </Callout>
+          <br />
+          <Text>
+            These are some optional parameters that you can pass along in the
+            request payload, which will overrides the default behavior
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
     "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
     
     "merchantType": "small", // default is large
@@ -123,17 +129,17 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
         "pineaxis"
     ] // defaults to aggregator.vpaHandles
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "acceptDeemedTxns": true,
   "businessName": "Setu",
   "businessType": "PROPRIETARY",
@@ -159,17 +165,17 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
   "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22",
   "aggregatorAccountId": "328a928f-e277-4798-8e28-4b19a61a8a23"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --location 'https://umap.setu.co/api/v1/aggregators/merchants' \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --location 'https://umap.setu.co/api/v1/aggregators/merchants' \
 --header 'Authorization: Bearer <access_token>' \
 --header 'Content-Type: application/json' \
 --data '{
@@ -181,11 +187,11 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
     "genre": "ONLINE",
     "mcc": "5432"
 }'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
 
 <NextPage
