--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Notifications and alerts
-page_title: UMAP - Notifications and alerts
+page_title: UPI Setu - Notifications and alerts
 order: 7
 visible_in_sidebar: true
 ---
@@ -8,17 +8,19 @@ visible_in_sidebar: true
 ## Notifications and alerts
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart" target="_self">🌟 Quickstart ↗</a>
+<a href="/payments/umap/quickstart" target="_self">
+  🌟 Quickstart ↗
+</a>
 
 <hr class="primary" />
 
-UMAP has a robust notification system to provide a transparent experience for our merchants.
+UPI Setu has a robust notification system to provide a transparent experience for our merchants.
 
--   <p>Retries to ensure notification delivery to customers</p>
--   <p>Coverage of statuses across all financial and non-financial flows</p>
--   <p>Configurable notification endpoints at merchant and aggregator levels</p>
+- <p>Retries to ensure notification delivery to customers</p>
+- <p>Coverage of statuses across all financial and non-financial flows</p>
+- <p>Configurable notification endpoints at merchant and aggregator levels</p>
 
 Understand the notification payloads for each of our products—
 
