--- a/content/payments/umap/notifications/mandates/execute.mdx
+++ b/content/payments/umap/notifications/mandates/execute.mdx
@@ -1,13 +1,13 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Notifications and alerts - Mandate execution
+page_title: UPI Setu - Notifications and alerts - Mandate execution
 order: 7
 visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for mandate execution
 
-These are the available webhooks for merchants, when they execute mandates being registered through UMAP.
+These are the available webhooks for merchants, when they execute mandates being registered through UPI Setu.
 
 <Tabs
   tabs={[
