--- a/content/payments/umap/notifications/mandates/notify.mdx
+++ b/content/payments/umap/notifications/mandates/notify.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Notify
-page_title: UMAP - Notifications and alerts - Mandate pre-debit notifications
+page_title: UPI Setu - Notifications and alerts - Mandate pre-debit notifications
 order: 6
 visible_in_sidebar: true
 ---
