--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Unpause
-page_title: UMAP - Notifications and alerts - Unpausing mandate
+page_title: UPI Setu - Notifications and alerts - Unpausing mandate
 order: 5
 visible_in_sidebar: true
 ---
