--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Update
-page_title: UMAP - Notifications and alerts - Updating mandate
+page_title: UPI Setu - Notifications and alerts - Updating mandate
 order: 2
 visible_in_sidebar: true
 ---
@@ -80,8 +80,9 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
       content: (
         <>
           <Text>
-            This webhook is triggered once UMAP knows the status of the mandate
-            update process. The following param values indicate this state—
+            This webhook is triggered once UPI Setu knows the status of the
+            mandate update process. The following param values indicate this
+            state—
             <ul>
               <li>
                 <code>operation</code> will be <code>update</code>
@@ -128,8 +129,9 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
       content: (
         <>
           <Text>
-            This webhook is triggered once UMAP knows the status of the mandate
-            update process. The following param values indicate this state—
+            This webhook is triggered once UPI Setu knows the status of the
+            mandate update process. The following param values indicate this
+            state—
             <ul>
               <li>
                 <code>operation</code> will be <code>update</code>
