--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -1,44 +1,43 @@
 ---
 sidebar_title: Overview
-page_title: UMAP - Overview
+page_title: UPI Setu - Overview
 order: 0
 visible_in_sidebar: true
 ---
 
 ## Overview
 
-### What is the UPI Merchant Acquiring Platform (UMAP)?
+### What is the UPI Setu?
 
-UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower **_merchants_** and **_merchant aggregators_** by providing state-of-the-art UPI solutions. 
+UPI Setu is a comprehensive UPI product suite designed by Setu to empower **_merchants_** and **_merchant aggregators_** by providing state-of-the-art UPI solutions.
 
-UMAP connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our customers.
+UPI Setu connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our customers.
 
 _<Text size="small">Unified Payments Interface (UPI) is a digital payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods—like savings accounts or credit cards—from the convenience of their phone.</Text>_
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank.png"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank.png"
+  alt="Bridge"
 />
 
 #### Key features
 
--   **Express ledger**—Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
--   **Refunds and disputes**—Specialised APIs to handle refunds and disputes, thus increasing operational value.
--   **Latest NPCI compliant stack**—Adherence to the latest UPI offerings and compliances, because of the direct partnership with NPCI.
+- **Express ledger**—Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
+- **Refunds and disputes**—Specialised APIs to handle refunds and disputes, thus increasing operational value.
+- **Latest NPCI compliant stack**—Adherence to the latest UPI offerings and compliances, because of the direct partnership with NPCI.
 
-<br/>
+<br />
 
-#### What can you do with UMAP?
--   **One time UPI payments**—Enable all UPI payments using QR, Payment Links and in-app deployment with our APIs.
--   **Recurring mandate payments**—Customisable recurring payments with UPI Mandates for all your use cases.
--   **UPI for financial services**—Enable BFSI specific products like Third Party Validation and Single Block Multi Debit.
+#### What can you do with UPI Setu?
 
+- **One time UPI payments**—Enable all UPI payments using QR, Payment Links and in-app deployment with our APIs.
+- **Recurring mandate payments**—Customisable recurring payments with UPI Mandates for all your use cases.
+- **UPI for financial services**—Enable BFSI specific products like Third Party Validation and Single Block Multi Debit.
 
 <NextPage
-    info={{
-        description:
-            "Get started with UMAP quickly",
-        slug: "/payments/umap/quickstart",
-        title: "Quickstart",
-    }}
+  info={{
+    description: "Get started with UPI Setu quickly",
+    slug: "/payments/umap/quickstart",
+    title: "Quickstart",
+  }}
 />
