--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -7,40 +7,45 @@ visible_in_sidebar: true
 
 ## UPI payments
 
-Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile app. 
+Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile app.
 
 ### What can you do with this product?
-Choose one or more of our products under the UMAP Payments stack to—
+
+Choose one or more of our products under the UPI Setu Payments stack to—
 
 - Re-target churning D2C customers with payment links in messaging campaigns
 - Enable web-based checkouts by using a customer VPA input on your website to trigger a collection flow
 - Use Third Party Validation (TPV) to verify customer details and remain compliant
 
 ###### Explore our payment products
-<UMAPPayments />
+
+<UPI SetuPayments />
 
 <hr class="primary" />
 
 ### Core concepts for Payment products
-UMAP relies on a few features that persist across various products offered under the **Payments** stack. These have been listed below.
 
-<br/>
+UPI Setu relies on a few features that persist across various products offered under the **Payments** stack. These have been listed below.
+
+<br />
 
 #### Payment statuses
-UMAP has consistent and transparent payment statuses across all transaction flows.  
+
+UPI Setu has consistent and transparent payment statuses across all transaction flows.
+
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/Frame_72/Frame_72.png"
   alt="Bridge"
 />
 
-| **Payment statuses** | **Description**                                               |
-| -------------------------------- | ------------------------------------------------- |
-| `payment.initiated`              | Payment has been attempted by a customer          |
-| `payment.ending`                 | Payment is currently being processed by UMAP      |
-| `payment.success`                | Payment has been successfully completed           |
-| `payment.failed`                 | Payment could not be processed                    |
+| **Payment statuses** | **Description**                                  |
+| -------------------- | ------------------------------------------------ |
+| `payment.initiated`  | Payment has been attempted by a customer         |
+| `payment.ending`     | Payment is currently being processed by UPI Setu |
+| `payment.success`    | Payment has been successfully completed          |
+| `payment.failed`     | Payment could not be processed                   |
 
-<br/>
+<br />
 
 #### Conditional, scenario-based flows
 
@@ -57,25 +62,24 @@ If a customer raises a dispute regarding a transaction, this API call allows for
 In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
 
 <Card padding="small" shape="rounded">
-    <Link href="/payments/umap/refunds-disputes">
-        <Element as="div">
-            <Text size="large" weight="600" textColor="blue-90">
-                Refunds and disputes
-            </Text>
-            <Text weight="400">Manage your refunds and disputes.</Text>
-        </Element>
-    </Link>
+  <Link href="/payments/umap/refunds-disputes">
+    <Element as="div">
+      <Text size="large" weight="600" textColor="blue-90">
+        Refunds and disputes
+      </Text>
+      <Text weight="400">Manage your refunds and disputes.</Text>
+    </Element>
+  </Link>
 </Card>
 
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Explore recurring payments with UPI Autopay",
-        slug: "/payments/umap/mandates",
-        title: "Mandates",
-    }}
+  info={{
+    description: "Explore recurring payments with UPI Autopay",
+    slug: "/payments/umap/mandates",
+    title: "Mandates",
+  }}
 />
 
 <WasPageHelpful />
