--- a/content/payments/umap/payments/collect/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect/create-collect-request.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP payments - Create collect request
+page_title: UPI Setu payments - Create collect request
 order: 2
 visible_in_sidebar: true
 ---
