--- a/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Verify customer VPA
-page_title: UMAP payments - Verify customer VPA
+page_title: UPI Setu payments - Verify customer VPA
 order: 1
 visible_in_sidebar: true
 ---
