--- a/content/payments/umap/payments/flash.mdx
+++ b/content/payments/umap/payments/flash.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Accept UPI payments with Flash
 
-Merchants can offer their customers a seamless payment experience by utilizing UMAP APIs to create UPI intent links. These intent links can either be directly integrated into their applications or converted into QR codes for easy scanning. Below is a detailed guide on how to implement this process:
+Merchants can offer their customers a seamless payment experience by utilizing UPI Setu APIs to create UPI intent links. These intent links can either be directly integrated into their applications or converted into QR codes for easy scanning. Below is a detailed guide on how to implement this process:
 
 <hr class="primary" />
 
