--- a/content/payments/umap/payments/flash/create-dqr.mdx
+++ b/content/payments/umap/payments/flash/create-dqr.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Dynamic QR
-page_title: UMAP payments - Create Dynamic QR
+page_title: UPI Setu payments - Create Dynamic QR
 order: 1
 visible_in_sidebar: true
 ---
@@ -40,13 +40,11 @@ visible_in_sidebar: true
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -65,8 +63,8 @@ visible_in_sidebar: true
   </tbody>
 </table>
 
-<br/>
-<br/>
+<br />
+<br />
 
 <Tabs
   tabs={[
@@ -88,16 +86,35 @@ visible_in_sidebar: true
   "transactionNote": "testpay"
 }`}
           </CodeBlockWithCopy>
-          <Text>Both amount and minAmount fields are optional, these fields when passed in the request change the behavior of how they are rendered on a Payer PSP</Text>
+          <Text>
+            Both amount and minAmount fields are optional, these fields when
+            passed in the request change the behavior of how they are rendered
+            on a Payer PSP
+          </Text>
           <Element as="ul">
             <li>
-              <strong>When only <code>amount</code> is passed</strong> — the amount passed in the request will be displayed on the payment page of the Payer PSP, but customer will not be allowed to choose any amount
+              <strong>
+                When only <code>amount</code> is passed
+              </strong>{" "}
+              — the amount passed in the request will be displayed on the
+              payment page of the Payer PSP, but customer will not be allowed to
+              choose any amount
             </li>
             <li>
-              <strong>When only <code>minAmount</code> is passed</strong> - the customer will be allowed to choose the amount to pay, it should be more than the minimum amount
+              <strong>
+                When only <code>minAmount</code> is passed
+              </strong>{" "}
+              - the customer will be allowed to choose the amount to pay, it
+              should be more than the minimum amount
             </li>
             <li>
-              <strong>When both <code>amount</code> and <code>minAmount</code> are passed</strong> - the amount passed in the request payload is displayed in the payment page of the Payer PSP, and the customer will be allowed to choose the payment amount
+              <strong>
+                When both <code>amount</code> and <code>minAmount</code> are
+                passed
+              </strong>{" "}
+              - the amount passed in the request payload is displayed in the
+              payment page of the Payer PSP, and the customer will be allowed to
+              choose the payment amount
             </li>
           </Element>
         </>
@@ -178,13 +195,11 @@ visible_in_sidebar: true
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -206,14 +221,14 @@ visible_in_sidebar: true
 <hr class="primary" />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "amount": 10000,
   "expiryDate": "2023-09-04T12:08:20+0530",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -237,27 +252,26 @@ visible_in_sidebar: true
   "closedAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --request GET \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --request GET \
   --url https://umap-uat-core.setu.co/api/v1/merchants/dqr/01ARZ3NDEKTSV4RRFFQ69G5FAV \
   --header 'Authorization: Bearer REPLACE_BEARER_TOKEN' \
   --header 'merchantId: 01ARZ3NDEKTSV4RRFFQ69G5FAV'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
-
 
 <NextPage
   info={{
