--- a/content/payments/umap/payments/flash/create-sqr.mdx
+++ b/content/payments/umap/payments/flash/create-sqr.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Static QR
-page_title: UMAP payments - Create Static QR
+page_title: UPI Setu payments - Create Static QR
 order: 1
 visible_in_sidebar: true
 ---
@@ -40,13 +40,11 @@ visible_in_sidebar: true
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -65,8 +63,8 @@ visible_in_sidebar: true
   </tbody>
 </table>
 
-<br/>
-<br/>
+<br />
+<br />
 
 <Tabs
   tabs={[
@@ -162,13 +160,11 @@ visible_in_sidebar: true
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -190,14 +186,14 @@ visible_in_sidebar: true
 <hr class="primary" />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "expiryDate": "2023-09-04T12:08:20+0530",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "intentLink": "upi://pay?pa=test-auto-pgruosncak@pineaxis&pn=merchant-4&am=100.00&tr=SU1240659756905923780&tn=sample%20single%20use%20qr&cu=INR&mc=1234",
@@ -213,27 +209,26 @@ visible_in_sidebar: true
   "transactionNote": "testpay",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --request GET \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --request GET \
   --url https://umap-uat-core.setu.co/api/v1/merchants/sqr/01ARZ3NDEKTSV4RRFFQ69G5FAV \
   --header 'Authorization: Bearer REPLACE_BEARER_TOKEN' \
   --header 'merchantId: 01ARZ3NDEKTSV4RRFFQ69G5FAV'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
-
 
 <NextPage
   info={{
