--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -30,13 +30,13 @@ When creating a payment link, merchants have the option to include the customer'
 
 #### Step 2 - Validate account during transaction
 
-As the transaction is initiated and processed through the UPI system, the bank account details provided at the payment stage are compared against those supplied by the merchant. This comparison is conducted in real-time, with the UMAP system receiving the customer's bank account details from NPCI.
+As the transaction is initiated and processed through the UPI system, the bank account details provided at the payment stage are compared against those supplied by the merchant. This comparison is conducted in real-time, with the UPI Setu system receiving the customer's bank account details from NPCI.
 
 <hr class="primary" />
 
 #### Step 3 - Accept or reject transaction
 
-Based on the outcome of the validation check, the UMAP system decides whether to accept or reject the transaction. If the customer’s bank account details match the details registered with the merchant, the transaction proceeds. If there is a discrepancy, the transaction is halted to prevent unauthorized payments.
+Based on the outcome of the validation check, the UPI Setu system decides whether to accept or reject the transaction. If the customer’s bank account details match the details registered with the merchant, the transaction proceeds. If there is a discrepancy, the transaction is halted to prevent unauthorized payments.
 
 <hr class="primary" />
 
