--- a/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check refund status
-page_title: UMAP - Refunds and disputes - Check refund status API
+page_title: UPI Setu - Refunds and disputes - Check refund status API
 order: 2
 visible_in_sidebar: true
 ---
@@ -8,62 +8,66 @@ visible_in_sidebar: true
 ## Check refund status
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/refunds-disputes/create-refund-api" target="_self">🌟 Create refund ↗</a>
+<a href="/payments/umap/refunds-disputes/create-refund-api" target="_self">
+  🌟 Create refund ↗
+</a>
 
 <hr class="primary" />
 
 <p>
-    The merchant will have to call the{" "}
-    <b>
-        <i>check refund status API</i>
-    </b>{" "}
-    with the correct set of parameters.
+  The merchant will have to call the{" "}
+  <b>
+    <i>check refund status API</i>
+  </b>{" "}
+  with the correct set of parameters.
 </p>
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/refunds/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/refunds/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
@@ -78,20 +82,20 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 <p>
-    To know more about all the API params, please refer to the API documentation{" "}
-    <a
-        href="/payments/umap/api-reference#/category~refund/operation~refund#fetchById"
-        target="_blank"
-    >
-        here
-    </a>
-    .
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~refund/operation~refund#fetchById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
 </p>
 
 <NextPage
-    info={{
-        description: "Read about disputes.  ",
-        slug: "/payments/umap/refunds-disputes",
-        title: "Disputes",
-    }}
+  info={{
+    description: "Read about disputes.  ",
+    slug: "/payments/umap/refunds-disputes",
+    title: "Disputes",
+  }}
 />
