--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -1,13 +1,13 @@
 ---
 sidebar_title: API integration
-page_title: UMAP - API integration
+page_title: UPI Setu - API integration
 order: 2
 visible_in_sidebar: true
 ---
 
 ## API integration guide
 
-A `clientID` and `secret` together is called an **API key**. An **API key** can be used to access resources on one deployment environment specifically, either `Test` or `Live`, but not both. Once you get the `clientID` and `secret` from Setu, use them to generate tokens to authorise all API requests. 
+A `clientID` and `secret` together is called an **API key**. An **API key** can be used to access resources on one deployment environment specifically, either `Test` or `Live`, but not both. Once you get the `clientID` and `secret` from Setu, use them to generate tokens to authorise all API requests.
 
 <hr class="primary" />
 
@@ -18,74 +18,73 @@ An API to generate access tokens, which are used to authorise any other API requ
 **Request**
 
 <table>
-    <tr>
-        <th>Host</th>
-        <td>            
-            <code>https://accountservice.setu.co</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Method</th>
-        <td>
-            <code>POST</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Path</th>
-        <td>
-            <code>/v1/users/login</code>
-        </td>
-    </tr>
-    <tr>
-        <th>Header</th>
-        <td>
-            <code>client</code>— will be <code>bridge</code>
-            <br />
-            <code>Content-Type</code>— will be <code>application/json</code>
-        </td>
-    </tr>
+  <tr>
+    <th>Host</th>
+    <td>
+      <code>https://accountservice.setu.co</code>
+    </td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>
+      <code>POST</code>
+    </td>
+  </tr>
+  <tr>
+    <th>Path</th>
+    <td>
+      <code>/v1/users/login</code>
+    </td>
+  </tr>
+  <tr>
+    <th>Header</th>
+    <td>
+      <code>client</code>— will be <code>bridge</code>
+      <br />
+      <code>Content-Type</code>— will be <code>application/json</code>
+    </td>
+  </tr>
 </table>
 
 <br />
 
-
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Request body",
-            content: (
-               <>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Request body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "clientID": "client_id",
   "secret": "client_secret",
   "grant_type": "client_credentials"
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --location 'https://accountservice.setu.co/v1/users/login' \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --location 'https://accountservice.setu.co/v1/users/login' \
 --header 'client: bridge' \
 --header 'Content-Type: application/json' \
 --data '{
@@ -93,45 +92,45 @@ An API to generate access tokens, which are used to authorise any other API requ
     "secret": "client_secret",
     "grant_type": "client_credentials"
 }'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
 
 <Callout type="tip">
-    💡 The <code>access_token</code> is valid for <code>300s</code>. The <code>access_token</code> can be <code>reused</code> any number of times within its expiry, so it is advised to cache the token. 
+  💡 The <code>access_token</code> is valid for <code>300s</code>. The{" "}
+  <code>access_token</code> can be <code>reused</code> any number of times
+  within its expiry, so it is advised to cache the token.
 </Callout>
 
-<br/>
+<br />
 
 ###### How to use the access token
 
--   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `Authorization` request header as `Bearer <access_token>`.
--   To get the new token, call the same `login` API at the 4th minute of token expiry and get the new token for the further API calls.
+- Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `Authorization` request header as `Bearer <access_token>`.
+- To get the new token, call the same `login` API at the 4th minute of token expiry and get the new token for the further API calls.
 
 <hr class="primary" />
 
 #### Proceed with integration
 
 <Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/api-integration/merchants">
-                Merchants
-            </Link>
-            <p>Integrate as a merchant to start accepting payments over UPI.</p>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/api-integration/aggregators">
-                Aggregators
-            </Link>
-            <p>Integrate as an aggregator, to on-board and manage multiple merchants.</p>
-        </Card>
-    </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <Link href="/payments/umap/api-integration/merchants">Merchants</Link>
+      <p>Integrate as a merchant to start accepting payments over UPI.</p>
+    </Card>
+  </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <Link href="/payments/umap/api-integration/aggregators">Aggregators</Link>
+      <p>
+        Integrate as an aggregator, to on-board and manage multiple merchants.
+      </p>
+    </Card>
+  </Portion>
 </Row>
 
 <WasPageHelpful />
