--- a/content/payments/umap/api-reference.mdx
+++ b/content/payments/umap/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: API reference
-page_title: UMAP - API reference
+page_title: UPI Setu - API reference
 order: 8
 visible_in_sidebar: true
 ---
