--- a/content/payments/umap/mandates/recur/execute.mdx
+++ b/content/payments/umap/mandates/recur/execute.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Mandates - Execute mandate
+page_title: UPI Setu - Mandates - Execute mandate
 order: 3
 visible_in_sidebar: true
 ---
@@ -132,7 +132,9 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#execute" target="_blank">here</a>.
 
-<p>UMAP will send notifications to the merchant for the following events:</p>
+<p>
+  UPI Setu will send notifications to the merchant for the following events:
+</p>
 <ul>
   <li>
     <b>mandate_operation.execute.success</b> (if mandate execution is
@@ -157,9 +159,9 @@ To know more about all the API params, please refer to the API documentation <a 
 
 <Callout type="highlight">
   If <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-  <code>true</code> while creating a mandate, UMAP will schedule executions and
-  send notifications to the merchant for <code>execution confirmation</code> and{" "}
-  <code>mandate status</code> in every recurrence cycle
+  <code>true</code> while creating a mandate, UPI Setu will schedule executions
+  and send notifications to the merchant for <code>execution confirmation</code>{" "}
+  and <code>mandate status</code> in every recurrence cycle
 </Callout>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -168,7 +170,7 @@ Please refer to the Document Reference section for checking the API reference an
 
 #### Check mandate execution status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate execution.
+In addition to the notifications sent by UPI Setu, Merchant can use this API to check the status of a mandate execution.
 
 <table>
   <tbody>
