--- a/content/payments/umap/mandates/reserve-plus/execute.mdx
+++ b/content/payments/umap/mandates/reserve-plus/execute.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Mandates - Execute single block multi-debit
+page_title: UPI Setu - Mandates - Execute single block multi-debit
 order: 2
 visible_in_sidebar: true
 ---
@@ -122,7 +122,9 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#execute" target="_blank">here</a>.
 
-<p>UMAP will send notifications to the merchant for the following events:</p>
+<p>
+  UPI Setu will send notifications to the merchant for the following events:
+</p>
 <ul>
   <li>
     <b>mandate_operation.execute.success</b> (if mandate execution is
@@ -151,7 +153,7 @@ Please refer to the Document Reference section for checking the API reference an
 
 #### Check mandate execution status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate execution.
+In addition to the notifications sent by UPI Setu, Merchant can use this API to check the status of a mandate execution.
 
 <table>
   <tbody>
