--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Registering VPA
-page_title: UMAP - Merchant on-boarding - Registering a VPA
+page_title: UPI Setu - Merchant on-boarding - Registering a VPA
 order: 3
 visible_in_sidebar: true
 ---
@@ -53,13 +53,11 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
       <td>
         <code>merchantId</code>
         <br />
-        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;
-        {" "}
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;{" "}
         <br />
         <a href="/payments/umap/api-integration" target="_blank">
           Generate an access token ↗
-        </a>{" "}
-        <br />
+        </a> <br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
       </td>
@@ -80,31 +78,35 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
 
 <hr class="primary" />
 
-
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Request body",
-            content: (
-               <>
-                  <Text><code>vpa</code> is the only parameter which is required to register a VPA for a merchant, if it is available, it will be registered and assigned against the merchant whose id is passed in the <code>merchantId</code> header.</Text>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Request body",
+      content: (
+        <>
+          <Text>
+            <code>vpa</code> is the only parameter which is required to register
+            a VPA for a merchant, if it is available, it will be registered and
+            assigned against the merchant whose id is passed in the{" "}
+            <code>merchantId</code> header.
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
     "referenceId": "1240689979139556557",
     "vpa": "fastestupi@pineaxis"
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Response body",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Response body",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -113,17 +115,17 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
   "vpa": "fastestupi@pineaxis",
   "verificationStatus": "verified"
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "cURL request",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="bash">
-{`curl --location 'https://umap.setu.co/api/v1/merchants/vpas' \
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "cURL request",
+      content: (
+        <>
+          <CodeBlockWithCopy language="bash">
+            {`curl --location 'https://umap.setu.co/api/v1/merchants/vpas' \
 --header 'Authorization: Bearer <access_token>' \
 --header 'merchantId: <merchant_id>' \
 --header 'Content-Type: application/json' \
@@ -131,11 +133,11 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
     "vpa": "merchant@pineaxis",
     "referenceId": "test"
 }'`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         }
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
 
 <WasPageHelpful />
