--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: VPA verification
-page_title: UMAP - Notifications and alerts - Customer VPA verification
+page_title: UPI Setu - Notifications and alerts - Customer VPA verification
 order: 5
 visible_in_sidebar: true
 ---
