--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Mandates
-page_title: UMAP - Notifications and alerts - Mandates
+page_title: UPI Setu - Notifications and alerts - Mandates
 order: 2
 visible_in_sidebar: true
 ---
@@ -8,40 +8,68 @@ visible_in_sidebar: true
 ## Notifications and alerts for mandates
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates" target="_self">🌟 UPI mandates overview ↗</a>
+<a href="/payments/umap/mandates" target="_self">
+  🌟 UPI mandates overview ↗
+</a>
 
 <hr class="primary" />
 
 ### Details for mandate statuses
+
 Below is a list mandate statuses that are uniform across all types of mandates. Notifications corresponding to them are sent after relevant operations are taken on the mandate by either a merchant, or their customer.
 
 Here is the expected life-cycle of a mandate—
+
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
+  alt="Bridge"
 />
 
 A quick summary of the general statuses associated with a mandate—
+
 <Text>
-    <ul>
-        <li><code>mandate.initiated</code>{" "}A customer or merchant has initiated creation of mandate</li>
-        <li><code>mandate.live</code>{" "}Customer has authorised the mandate, and the mandate is active</li>
-        <li><code>mandate.rejected</code>{" "}The mandate could not be set up, due to some error or due to the customer not authorising the mandate</li>
-        <li><code>mandate.paused</code>{" "}The customer has decided to pause executions for mandate, which can be temporary</li>
-        <li><code>mandate.unpaused</code>{" "}The customer has decided to unpause executions for mandate, and mandate is active again</li>
-        <li><code>mandate.revoked</code>{" "}The customer has decided to stop executions for mandate before its expiry—this is a permanent action, and payments from this customer would need a new mandate to be set up</li>
-        <li><code>mandate.complete</code>{" "}All mandate executions are complete</li>
-    </ul>
+  <ul>
+    <li>
+      <code>mandate.initiated</code> A customer or merchant has initiated
+      creation of mandate
+    </li>
+    <li>
+      <code>mandate.live</code> Customer has authorised the mandate, and the
+      mandate is active
+    </li>
+    <li>
+      <code>mandate.rejected</code> The mandate could not be set up, due to some
+      error or due to the customer not authorising the mandate
+    </li>
+    <li>
+      <code>mandate.paused</code> The customer has decided to pause executions
+      for mandate, which can be temporary
+    </li>
+    <li>
+      <code>mandate.unpaused</code> The customer has decided to unpause
+      executions for mandate, and mandate is active again
+    </li>
+    <li>
+      <code>mandate.revoked</code> The customer has decided to stop executions
+      for mandate before its expiry—this is a permanent action, and payments
+      from this customer would need a new mandate to be set up
+    </li>
+    <li>
+      <code>mandate.complete</code> All mandate executions are complete
+    </li>
+  </ul>
 </Text>
 
 <hr class="primary" />
 
 ### Available actions against a mandate
-A merchant or a customer can initiate different actions against a mandate. A combination of this and the aboves statuses are used to notify merchants about specific updates to mandate statuses. 
+
+A merchant or a customer can initiate different actions against a mandate. A combination of this and the aboves statuses are used to notify merchants about specific updates to mandate statuses.
 
 These scenarios are described in more detail under each of the following actions—
+
 - **<a href="/payments/umap/notifications/mandates/create">Create mandate ↗</a>**
 - **<a href="/payments/umap/notifications/mandates/update">Update mandate ↗</a>**
 - **<a href="/payments/umap/notifications/mandates/pause">Pause mandate↗</a>**
