--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Notifications and alerts - Creation of mandate
+page_title: UPI Setu - Notifications and alerts - Creation of mandate
 order: 1
 visible_in_sidebar: true
 ---
