--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Pause
-page_title: UMAP - Notifications and alerts - Pausing mandate
+page_title: UPI Setu - Notifications and alerts - Pausing mandate
 order: 4
 visible_in_sidebar: true
 ---
