--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Revoke
-page_title: UMAP - Notifications and alerts - Revoking mandate
+page_title: UPI Setu - Notifications and alerts - Revoking mandate
 order: 3
 visible_in_sidebar: true
 ---
