--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Refunds
-page_title: UMAP - Notifications and alerts - Refunds
+page_title: UPI Setu - Notifications and alerts - Refunds
 order: 3
 visible_in_sidebar: true
 ---
@@ -8,40 +8,54 @@ visible_in_sidebar: true
 ## Notifications and alerts for refunds
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/refunds-disputes" target="_self">🌟 Refunds and disputes ↗</a>
+<a href="/payments/umap/refunds-disputes" target="_self">
+  🌟 Refunds and disputes ↗
+</a>
 
 <hr class="primary" />
 
 ### Details for refund statuses
-UMAP equips merchants with a straightforward API-based mechanism. to process refunds directly to the customer's bank account that was originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution. 
 
-The statuses are consistent across all UMAP products—
+UPI Setu equips merchants with a straightforward API-based mechanism. to process refunds directly to the customer's bank account that was originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
+
+The statuses are consistent across all UPI Setu products—
+
 <Text>
-    <ul>
-        <li><code>refund.initiated</code>&nbsp;Refund request has been create at UMAP</li>
-        <li><code>refund.pending</code>&nbsp;Refund is in queue to be processed</li>
-        <li><code>refund.successful</code>&nbsp;Refund has been successfully completed</li>
-        <li><code>refund.failed</code>&nbsp;Refund could not be processed</li>
-    </ul>
+  <ul>
+    <li>
+      <code>refund.initiated</code>&nbsp;Refund request has been create at UPI
+      Setu
+    </li>
+    <li>
+      <code>refund.pending</code>&nbsp;Refund is in queue to be processed
+    </li>
+    <li>
+      <code>refund.successful</code>&nbsp;Refund has been successfully completed
+    </li>
+    <li>
+      <code>refund.failed</code>&nbsp;Refund could not be processed
+    </li>
+  </ul>
 </Text>
 
 Here is the life-cycle for refund statuses—
+
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
+  alt="Bridge"
 />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Refund success",
-            content: (
-                <>
-                   <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Refund success",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -66,17 +80,17 @@ Here is the life-cycle for refund statuses—
    // Reason
    "reason": {}
 }`}
-                   </CodeBlockWithCopy>
-                </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Refund failed",
-            content: (
-                <>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Refund failed",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -101,9 +115,9 @@ Here is the life-cycle for refund statuses—
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-         },
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
