--- a/content/payments/umap/payments/tpv/check-status.mdx
+++ b/content/payments/umap/payments/tpv/check-status.mdx
@@ -1,68 +1,79 @@
 ---
 sidebar_title: Check status
-page_title: UMAP - Payments - TPV - Check payment status
+page_title: UPI Setu - Payments - TPV - Check payment status
 order: 2
 visible_in_sidebar: true
 ---
 
-
 ## Check payment status
 
-<p>The merchant can use the <b><i>check status API</i></b> to check the payment status, for third party verification</p>
+<p>
+  The merchant can use the{" "}
+  <b>
+    <i>check status API</i>
+  </b>{" "}
+  to check the payment status, for third party verification
+</p>
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/payments/product-instances/&#123;tpvId&#125;/last</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
-                    Check payment status ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>
+          /v1/merchants/payments/product-instances/&#123;tpvId&#125;/last
+        </code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"
+          target="_blank"
+        >
+          Check payment status ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
@@ -90,6 +101,7 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 **In the above response:**
+
 - `id` is a unique ID that is associated with this tpv payment and can be used to track it later.
 - `reason` object is only populated when there are errors from the NPCI.
 
