--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Payments - Create TPV API
+page_title: UPI Setu - Payments - Create TPV API
 order: 1
 visible_in_sidebar: true
 ---
@@ -9,60 +9,63 @@ visible_in_sidebar: true
 
 The merchant generates a payment link. This unique link serves as the gateway for customers to initiate intent transactions via their Third-Party Application Provider (TPAP).
 
-
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/tpv</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"target="_blank">
-                    Create TPV API ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/tpv</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"
+          target="_blank"
+        >
+          Create TPV API ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "amount": 100,
     "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
     "expireAfter": 10,
@@ -94,13 +97,15 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 </CodeBlockWithCopy>
 
 <Element as="ul">
-    <li><code>productConfigId</code> is an optional field.</li>
+  <li>
+    <code>productConfigId</code> is an optional field.
+  </li>
 </Element>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 100,
   "expireAfter": 10,
   "id": "1240689979139556556",
@@ -153,7 +158,6 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 }`}
 </CodeBlockWithCopy>
 
-
 <hr class="primary" />
 
 ## Check TPV Status
@@ -161,58 +165,62 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/tpv/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~tpv/operation~tpv#fetchTPV"target="_blank">
-                    Check TPV Status ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/tpv/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~tpv/operation~tpv#fetchTPV"
+          target="_blank"
+        >
+          Check TPV Status ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 100,
   "expireAfter": 10,
   "id": "1240689979139556556",
@@ -261,12 +269,11 @@ Following the initiation of the transaction, the system retrieves the payment de
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Check payment status associated with tpv.",
-        slug: "/payments/umap/payments/tpv/check-status",
-        title: "Check payment status",
-    }}
+  info={{
+    description: "Check payment status associated with tpv.",
+    slug: "/payments/umap/payments/tpv/check-status",
+    title: "Check payment status",
+  }}
 />
 
 <WasPageHelpful />
