--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -1,26 +1,28 @@
 ---
 sidebar_title: Aggregators
-page_title: UMAP - Quickstart for aggregators
+page_title: UPI Setu - Quickstart for aggregators
 order: 1
 visible_in_sidebar: true
 ---
 
 ## Quickstart for aggregators
 
-This guide will help you get started with UMAP integration as an **aggregator**.
+This guide will help you get started with UPI Setu integration as an **aggregator**.
 
 <Callout type="tip">
-    This quickstart is for an aggregator, if you are a merchant, please refer to the{" "}
-    <a href="/payments/umap/quickstart" target="_self">
-        merchant quickstart
-    </a>.
+  This quickstart is for an aggregator, if you are a merchant, please refer to
+  the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    merchant quickstart
+  </a>
+  .
 </Callout>
 
 <br />
 
 ### Who is an aggregator?
 
-An aggregator on UMAP is a large merchant platform that on-boards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control how their merchants process payments, like by enabling different payment methods, settlement accounts and notifications.
+An aggregator on UPI Setu is a large merchant platform that on-boards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UPI Setu has the ability to configure and control how their merchants process payments, like by enabling different payment methods, settlement accounts and notifications.
 
 <hr class="primary" />
 
@@ -31,8 +33,8 @@ An aggregator on UMAP is a large merchant platform that on-boards multiple merch
 As an aggregator, the first step for you is to interact with Setu’s sales team to determine the solution that will best meet your needs. Right after that, we will start collecting business KYC details and finalise commerical agreements. After business formalities are over, Setu will create an aggregator account and you can start creating merchants to offer UPI products to them.
 
 <Callout type="tip">
-    For custom configurations for your business, reach out to{" "}
-    <a href="">umap@setu.co</a>
+  For custom configurations for your business, reach out to{" "}
+  <a href="">umap@setu.co</a>
 </Callout>
 
 <hr class="tertiary" />
@@ -44,12 +46,11 @@ Contact Setu on <a href="">umap@setu.co</a> to get `client-id` and `secret`. The
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Get started with integrating UPI on your platform",
-        slug: "/payments/umap/api-integration",
-        title: "API Integration",
-    }}
+  info={{
+    description: "Get started with integrating UPI on your platform",
+    slug: "/payments/umap/api-integration",
+    title: "API Integration",
+  }}
 />
 
 <WasPageHelpful />
