--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -1,26 +1,28 @@
 ---
 sidebar_title: Merchants
-page_title: UMAP - Quickstart for merchants
+page_title: UPI Setu - Quickstart for merchants
 order: 2
 visible_in_sidebar: true
 ---
 
 ## Quickstart for merchants
 
-This guide will help you get started with UMAP integration as a **merchant**.
+This guide will help you get started with UPI Setu integration as a **merchant**.
 
 <Callout type="tip">
-    This quickstart is for a merchant, if you are an aggregator, please refer to the{" "}
-    <a href="/payments/umap/quickstart" target="_self">
-        aggregator quickstart
-    </a>.
+  This quickstart is for a merchant, if you are an aggregator, please refer to
+  the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    aggregator quickstart
+  </a>
+  .
 </Callout>
 
 <br />
 
 #### Who is a merchant?
 
-A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
+A merchant on UPI Setu is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
 
@@ -28,7 +30,7 @@ A merchant on UMAP is any business that wants to collect UPI payments from their
 
 ###### Step 1 - Register on Bridge
 
-As a merchant, you can integrate with UMAP by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlements details, notifications and more directly from Bridge.
+As a merchant, you can integrate with UPI Setu by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlements details, notifications and more directly from Bridge.
 
 <hr class="tertiary" />
 
@@ -39,12 +41,11 @@ Contact Setu on <a href="">umap@setu.co</a> to get `client-id` and `secret`. The
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Get started with configuring UPI products",
-        slug: "/payments/umap/api-integration",
-        title: "API Integration",
-    }}
+  info={{
+    description: "Get started with configuring UPI products",
+    slug: "/payments/umap/api-integration",
+    title: "API Integration",
+  }}
 />
 
 <WasPageHelpful />
