--- a/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
+++ b/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
@@ -1,55 +1,62 @@
 ---
 sidebar_title: Fetch dispute
-page_title: UMAP - Refunds and disputes - Fetch dispute API
+page_title: UPI Setu - Refunds and disputes - Fetch dispute API
 order: 3
 visible_in_sidebar: true
 ---
 
 ## Fetch dispute
 
-<p>The merchant will have to call the <b><i>fetch dispute API</i></b> with the correct set of parameters.</p>
+<p>
+  The merchant will have to call the{" "}
+  <b>
+    <i>fetch dispute API</i>
+  </b>{" "}
+  with the correct set of parameters.
+</p>
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/disputes/&#123;disputeId&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
-                    OAuth
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/disputes/&#123;disputeId&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/umap/api-integration" target="_blank">
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 100,
   "currency": "INR",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -64,6 +71,18 @@ visible_in_sidebar: true
 
 <b>In the above response—</b>
 <ul>
-    <li><code>id</code> is a unique dispute ID that is associated with this dispute and can be used to track it later.</li>
+  <li>
+    <code>id</code> is a unique dispute ID that is associated with this dispute
+    and can be used to track it later.
+  </li>
 </ul>
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById" target="_blank">here</a>.</p>
+<p>
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
+</p>
