--- a/content/payments/umap/transaction-monitoring/check-status-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-api.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check status
-page_title: UMAP - Transaction monitoring - Check status API
+page_title: UPI Setu - Transaction monitoring - Check status API
 order: 1
 visible_in_sidebar: true
 ---
@@ -8,44 +8,45 @@ visible_in_sidebar: true
 ## Check status
 
 <table>
-    <tbody>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/merchants/payments/product-instances/&#123;id&#125;/last</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/merchants/payments/product-instances/&#123;id&#125;/last</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
@@ -72,6 +73,9 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"target="_blank">
-<code>Check status API</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"
+  target="_blank"
+>
+  <code>Check status API</code> ↗
 </a>
